# suttacentral-static

./: .editorconfig  .eleventy.js  .gitignore  .prettierignore  .prettierrc  DEVELOPMENT.md  README.md  package.json  pagefind.yml  pnpm-lock.yaml  taplo.toml  vercel.json
.github/workflows/: build-preview-release.yml  deploy-published-release.yml  release.yml
_data/: _masterData.js  _siteMetaData.js  chapterData.js  flatChapterData.js  flatIndexData.js  flatMenuData.js  flatTextData.js  indexData.js  menuData.js  pitakaData.js  pitikaData.js  siteMetaData.js  textData.js  textMetaData.js
_includes/: base-layout.liquid  styles.css
_includes/components/: footer.liquid  publication-info.liquid
data/: _masterData.js  _shortcuts.json  _siteMetaData.js  chapterData.js  indexData.js  pitakaData.js  textData.js  textMetaData.js
includes/: footer.liquid  headerNav.liquid  parallelsDetails.liquid  publicationInfo.liquid  searchForm.liquid  textMetaContent.liquid  translationsDetails.liquid
layouts/: base.liquid
pages/: 404.liquid  404.md  _404.liquid  _robots.liquid  _search.liquid  _sitemap.liquid  chapter.liquid  chapter.md  index.liquid  index.md  pitaka.liquid  pitika.liquid  pitika.md  text.liquid  text.md  textMeta.liquid  textMetaData.liquid
scripts/: 404.js  listen.js  preSearch.js  search.js  userPrefs.js
styles/: styles.css
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json  desktop.json
tauri/icons/: icon.icns
tauri/src/: init_script.js  lib.rs
tools/: archive.js  archiveAndUpload.js  cleanupPagefind.js  minifyAssets.js  release.js  test-srht-upload.js
