[package]
authors = ["benmneb"]
description = "A fast and minimal alternative frontend for SuttaCentral.net"
edition = "2021"
license = "CC0"
name = "suttacentral-express"
repository = "https://git.sr.ht/~benmneb/suttacentral-static"
rust-version = "1.77.2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"

[build-dependencies]
tauri-build = {version = "2.5.3", features = []}

[dependencies]
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "2.9.5", features = []}
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

# One of the simplest frontend agnostic size improvements you can do to your project is adding a Cargo profile to it.
# from https://v2.tauri.app/concept/size/#cargo-configuration

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
